<resources>
    <string name="successfully_imported">Successfully imported.</string>
    <string name="import_from_file">Import</string>
    <string name="export_to_file">Export</string>
    <string name="response_saved">Saved into</string>
    <string name="not_able_to_save">An external storage is not available.</string>
    <string name="next_log">Next</string>
    <string name="previous_log">Previous</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="save_to_file">Save to the file</string>
    <string name="number_of_tries_description">How many attempts will be done.</string>
    <string name="warning_limit_description">Number of failed logs before notification.</string>
    <string name="priority_description">The higher priority, the higher in order.</string>
    <string name="server_responce_copied">The server response for this log is copied to clipboard.</string>
    <string name="priority">Priority</string>
    <string name="time">Time</string>
    <string name="show_only_fails">Show fails only</string>
    <string name="turn_on_off_sound">Sound</string>
    <string name="http_address_example">http://example.com</string>
    <string name="cant_open_url">Can\'t open URL.</string>
    <string name="options">Task options</string>
    <string name="summary_beginning">Failed</string>
    <string name="summary_ending_single">time recently.</string>
    <string name="summary_ending_plural">times recently.</string>
    <string name="show_notifications">Show notifications</string>
    <string name="set_number_of_tries_for_ping_explanation">Set number of tries for tasks of \"ping\" type.</string>
    <string name="set_number_of_tries_for_portcheck_explanation">Set number of tries for tasks of \"checking port\" type.</string>
    <string name="how_often_execute">How often should tasks be executed?</string>
    <string name="number_of_tries">Number of tries</string>
    <string name="warning_limit">Warning limit</string>
    <string name="on_off">On/Off</string>
    <string name="ip">Ip address:</string>
    <string name="regexp">Regular expression:</string>
    <string name="regexp_example">[a-fA-F0-9]{2}</string>
    <string name="integrity_success_response">In successful cases response is not being recorded to save device memory.</string>
    <string name="or_just_generate_regexp">Or just type in anything that suppose to be received
        from the address and press \"Generate\" button.</string>
    <string name="gen_regexp">Generate</string>
    <string name="set_number_of_tries_for_ping">Number of tries for \"ping\"</string>
    <string name="set_number_of_tries_for_portcheck">Number of tries for \"portcheck\"</string>
    <string name="failed_execution_notification_text">Execution of one or more tasks failed.</string>
    <string name="task_execution_on">All tasks execution is on.</string>
    <string name="task_execution_off">All tasks execution is off.</string>
    <string name="task_is_off">This task is off now.</string>
    <string name="task_is_on">This task is on now.</string>
    <string name="update_all_tasks">Update tasks</string>
    <string name="last_session_was">Last successful session was</string>
    <string name="your_logs_will_be_here">No logs yet.</string>
    <string name="date_column">Date</string>
    <string name="invalid_input">Invalid input</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_clear_logs">Are you sure that you want to delete all logs?</string>
    <string name="are_you_sure_delete_task">Are you sure that you want to delete this task?</string>
    <string name="clear_logs">Clear all logs</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="turnonoff">Turn On/Off</string>
    <string name="app_name">Sollertia Monitoring</string>
    <string name="create_new_task">Create new task</string>
    <string name="url_example">example.com</string>
    <string name="port_example">80</string>
    <string name="invalid_port">"Invalid port"</string>
    <string name="invalid_ip">Invalid IP</string>
    <string name="create_button">Create</string>
    <string name="fail">fail</string>
    <string name="unknown_host">unknown host</string>
    <string name="error">error</string>
    <string name="success">success</string>
    <string name="partial_success">Partial success</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="regexp_not_valid">Regexp is not valid.</string>

    <string-array name="tasks_array">
        <item>Ping specific port</item>
        <item>Ping</item>
        <item>Content integrity test</item>
    </string-array>


    <string-array name="time_periods">
        <item>Every fifteen minutes</item>
        <item>Every half-hour</item>
        <item>Every hour</item>
        <item>Every half-day</item>
        <item>Every day</item>
    </string-array>
    <string-array name="time_periods_keys">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="preference_main">com.slaruva.sollertiamonitoring.PREFERENCE_MAIN</string>
    <string name="what_type_of_task">What type of task would you like to create?</string>
    <string name="back">Back</string>
    <string name="minPing">Min</string>
    <string name="maxPing">Max</string>
    <string name="avgPing">Avg</string>
    <string name="mdevPing">Mdev</string>
    <string name="comma_ms">, ms</string>
    <string name="lossPing">Received</string>
</resources>
