<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/on_off_switch_item"
        android:title=""
        app:showAsAction="always"
        app:actionLayout="@layout/toolbar_switch"/>
    <item
        android:id="@+id/add_task"
        app:showAsAction="ifRoom"
        android:title="@string/create_new_task"
        android:icon="@drawable/plus"
        android:onClick="onCreateNewTask"/>
    <item
        android:id="@+id/refresh"
        android:title="@string/update_all_tasks"
        android:icon="@drawable/update"
        app:showAsAction="ifRoom"
        android:onClick="onExecuteAllTasks"/>
    <item
        android:id="@+id/import_from_file"
        android:title="@string/import_from_file"
        app:showAsAction="never"
        android:onClick="onImport" />
    <item
        android:id="@+id/export_to_file"
        android:title="@string/export_to_file"
        app:showAsAction="never"
        android:onClick="onExport" />
</menu>