<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- save is not used now -->
    <item
        android:id="@+id/button_save"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/save"
        android:icon="@drawable/save"
        android:onClick="onSave" />

    <item
        android:id="@+id/on_off_switch_item"
        android:title=""
        app:showAsAction="always"
        app:actionLayout="@layout/toolbar_switch"/>
    <item
        android:id="@+id/clear_logs"
        app:showAsAction="ifRoom"
        android:title="@string/clear_logs"
        android:icon="@drawable/erase"
        android:onClick="onClearLogs" />
    <item
        android:id="@+id/button_delete"
        app:showAsAction="ifRoom"
        android:title="@string/delete"
        android:icon="@drawable/trash_can"
        android:onClick="onDelete" />
    <item
        android:id="@+id/task_preferences"
        app:showAsAction="never"
        android:title="@string/options"
        android:onClick="onOptions" />
</menu>