<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>
    <include layout="@layout/error"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:layout_weight=".70"
                    android:id="@+id/ip"
                    android:maxLines="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=":"
                    android:id="@+id/colon" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:layout_weight=".1"
                    android:inputType="number"
                    android:id="@+id/port" />
            </LinearLayout>

            <include layout="@layout/savable_and_deletable"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="5dip"
            android:paddingLeft="5dip"
            android:paddingEnd="5dip"
            android:paddingRight="5dip">
            <TableRow>
                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minPing"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/maxPing"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/avgPing"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lossPing"
                    android:gravity="center"/>
            </TableRow>
        </TableLayout>

        <include layout="@layout/no_logs_message"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:id="@+id/log_list" />

        </LinearLayout>
</LinearLayout>